--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
   },
   "dependencies": {
     "@duckdb/duckdb-wasm": "^1.33.1-dev18.0",
-    "anymap-ts": "file:../anymap-ts",
+    "anymap-ts": "^0.6.2",
     "geotiff": "^3.0.3",
     "lucide-react": "^0.468.0",
     "maplibre-gl": "^5.16.0",
