Add enhanced GIS tools: Shapefile support, URL loading, Cesium 3D, measurement and drawing
- Add Shapefile (.shp, .zip) loading support using shpjs library
- Implement Add from URL dialog for GeoJSON, COG, PMTiles, XYZ tiles
- Fully implement Cesium 3D adapter with GeoJSON, 3D Tiles, imagery layers
- Add distance and area measurement tools with Haversine calculations
- Add drawing tools for points, lines, and polygons
- Update toolbar with measure and draw tool buttons
- Add vite-plugin-cesium for Cesium asset handling
- Use anymap-ts from npm registry instead of local dependency

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "dependencies": {
     "@duckdb/duckdb-wasm": "^1.33.1-dev18.0",
     "anymap-ts": "^0.6.2",
+    "cesium": "^1.138.0",
     "geotiff": "^3.0.3",
     "lucide-react": "^0.564.0",
     "maplibre-gl": "^5.16.0",
@@ -43,6 +44,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "shpjs": "^6.2.0",
+    "vite-plugin-cesium": "^1.2.23",
     "zustand": "^5.0.0"
   },
   "devDependencies": {
